--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-font=Noto Mono:size=10,Fira Code:size=10
+font=FiraMono Nerd Font:size=10
 # font-bold=Fira Code-Bold:size=10
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -65,7 +65,6 @@ launch=xdg-open ${url}
 
 [cursor]
 # style=block
-color = cdcecf aeafb0
 # blink=no
 # beam-thickness=1.5
 # underline-thickness=<font underline thickness>
@@ -83,6 +82,7 @@ background = 192330
 foreground = cdcecf
 # flash=7f7f00
 # flash-alpha=0.5
+cursor = cdcecf aeafb0
 
 ## Normal/regular colors (color palette 0-7)
 regular0 = 393b44
