Update font size

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-font=FiraMono Nerd Font:size=10
+font=FiraMono Nerd Font:size=11
 # font-bold=Fira Code-Bold:size=10
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -68,6 +68,8 @@ launch=xdg-open ${url}
 # blink=no
 # beam-thickness=1.5
 # underline-thickness=<font underline thickness>
+color = cdcecf aeafb0
+
 
 [mouse]
 # hide-when-typing=no
@@ -82,7 +84,7 @@ background = 192330
 foreground = cdcecf
 # flash=7f7f00
 # flash-alpha=0.5
-cursor = cdcecf aeafb0
+# cursor = cdcecf aeafb0
 
 ## Normal/regular colors (color palette 0-7)
 regular0 = 393b44
