Proper tmux terminal overrides

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -50,8 +50,10 @@ bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 # appearance
-set -g default-terminal "${TERM}"
-set -as terminal-features ",${TERM}:RGB"
+set -g default-terminal "tmux-256color"
+set -as terminal-features ",foot:RGB"
+set -ga update-environment "COLORTERM" 
+
 set -g status-left-length 40  # Increase session name length
 set -g status-right-length 60  # Increase space for host length
 set -g status-position bottom  # default
